# comp_graphics

./: CMakeLists.txt
include/: camera.h  camera2d.h  camera3d.h  geometry.h  glrenderer.h  line.h  renderer.h  scene.h  sceneobj.h  shader.h  shaders.h  shape.h  uimanager.h  window.h  workspace.h
include/abstract/: renderableobj.h  renderer.h  renderprovider.h  scene.h  transformableobj.h  transformableobj2d.h  transformableobj3d.h  uimanager.h
include/glm/gtc/: quaternion_simd.inl
include/interfaces/: cameracontroller.h  controllable.h  observationcontroller2d.h  observationcontroller3d.h  renderable.h  renderprovider.h
include/lib/glad/: glad.h
include/objects/: axisxy.h  axisxyz.h  bspline2d.h  bsplinepolygon2d.h  bsurface.h  bsurfacepolygon.h  geometry.h  line.h  line3d.h  plane.h  shape.h  shape3d.h
include/scenes/: basicscene.h  scene2d.h  scene3d.h  scenelr1.h  scenelr2.h  scenelr3.h  scenetest2d.h
include/ui/: glfwimguicameramanager.h  glfwimguicontrolmanager.h  glfwimguimanager.h  glfwimguiuicameramanager.h  lr1controller.h  lr1uimanager.h  scenecontroller3d.h  uicontroller.h  uilr1controller.h  uilr2controller.h  uilr3controller.h  uiscenecontroller.h  uiscenecontroller2d.h  uiscenecontroller3d.h  uitestcontroller2d.h  uiwindowcontroller.h
shaders/: basic_vertex.glsl  vertex_shader.glsl
src/: camera.cpp  camera2d.cpp  camera3d.cpp  glad.c  glrenderer.cpp  glrendererunit.cpp  line.cpp  main.cpp  renderer.cpp  scene.cpp  sceneobj.cpp  shader.cpp  shape.cpp  uimanager.cpp  window.cpp  workspace.cpp
src/abstract/: renderableobj.cpp  renderer.cpp  renderprovider.cpp  scene.cpp  sceneobj.cpp  transformableobj.cpp  transformableobj2d.cpp  transformableobj3d.cpp
src/lib/imgui/: imgui_impl_glfw.cpp
src/objects/: axisxy.cpp  axisxyz.cpp  bspline2d.cpp  bsplinepolygon2d.cpp  bsurface.cpp  bsurfacepolygon.cpp  line.cpp  line3d.cpp  plane.cpp  shape.cpp  shape3d.cpp
src/scenes/: basicscene.cpp  scene2d.cpp  scene3d.cpp  scenelr1.cpp  scenelr2.cpp  scenelr3.cpp  scenetest2d.cpp
src/ui/: glfwimguicameramanager.cpp  glfwimguicontrolmanager.cpp  glfwimguimanager.cpp  lr1controller.cpp  lr1uimanager.cpp  scenecontroller3d.cpp  uicontroller.cpp  uilr1controller.cpp  uilr2controller.cpp  uilr3controller.cpp  uiscenecontroller.cpp  uiscenecontroller2d.cpp  uiscenecontroller3d.cpp  uitestcontroller2d.cpp  uiwindowcontroller.cpp
